# rgbd-scene-graph

./: .gitignore  Dockerfile  Makefile  README.md  portfolio-content.md  pyproject.toml  requirements.txt
Data/BasicHouse_with_pc/: _ifcgeom_scene.labels.json  frames.json  render_summary.json
Data/BasicHouse_with_pc/depth_exr/: 000000.exr  000002.exr  000005.exr  000009.exr  000011.exr  000013.exr  000014.exr  000016.exr  000017.exr  000018.exr  000019.exr  000025.exr  000028.exr  000039.exr  000041.exr  000043.exr  000044.exr  000045.exr  000050.exr  000051.exr  000053.exr  000054.exr  000058.exr  000061.exr  000062.exr  000063.exr  000064.exr  000071.exr  000073.exr  000075.exr  000076.exr  000078.exr  000079.exr  000081.exr  000083.exr  000087.exr  000090.exr  000092.exr  000093.exr  000096.exr  (+33 more)
Data/synagoge_with_pc/: _ifcgeom_scene.labels.json
Data/synagoge_with_pc/depth_exr/: 000000.exr  000002.exr  000005.exr  000006.exr  000007.exr  000010.exr  000015.exr  000017.exr  000018.exr  000019.exr  000022.exr  000023.exr  000024.exr  (+195 more)
data/synagoge_with_pc/: camera_info.json  frames.json  prompt.txt  render_summary.json
docs/: coordinates.md  inspection_findings.md  inspection_report.json
outputs/basichouse/: BasicHouse_with_pc.graphml  BasicHouse_with_pc.json  BasicHouse_with_pc_graph_3d.html  BasicHouse_with_pc_objects.json
outputs/synagoge/: synagoge_with_pc_graph_3d.html  synagoge_with_pc_objects.json
scripts/: download_weights.py  inspect_data.py  run_pipeline.py  verify_pose.py
src/rgbdsg/: __init__.py
tests/: test_geometry.py  test_ifc.py
(+295 files in other folders)
